--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,8 +2,8 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "todo-list-aws"
-s3_prefix = "todo-list-aws"
+stack_name = "todo-list-aws-default"
+s3_prefix = "todo-list-aws-default"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"default\""
