--- a/pipelines/PIPELINE-FULL-CD/Jenkinsfile
+++ b/pipelines/PIPELINE-FULL-CD/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                     git checkout -b master origin/master
                     git merge develop
                 """, label: "Merging code to master"
-                sshagent(['github']) {
+                sshagent(['dueactive']) {
                     sh "git push origin master"
                 }
 
